bugs/readme.txt
b1:
ex1.cxx:798:16: error: no viable conversion from 'ex1::tensor_ref_2' to 'double'
        double l_probe_l_4_22 = makeEval_UnitSquareMesh_Lagrange_2_1(
               ^                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.

b2: Numerical error  (could be fixed with mini-merge)

b3: Type error (adding ofields)